Bug #26938
multisite: data sync error repo processing does not back off on empty
Start date:
08/14/2018
Due date:
% Done:
0%
Source:
Tags:
multisite
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Description
/* the retry repo is empty, we back off a bit before calling it again */
incremental data sync has some logic to calculate a backoff time in this case, but nothing enforces that backoff
Related issues
History
#1 Updated by Casey Bodley 6 months ago
- Status changed from In Progress to Need Review
#2 Updated by Casey Bodley 5 months ago
- Status changed from Need Review to Pending Backport
#3 Updated by Nathan Cutler 5 months ago
- Copied to Backport #35979: mimic: multisite: data sync error repo processing does not back off on empty added
#4 Updated by Nathan Cutler 5 months ago
- Copied to Backport #35980: luminous: multisite: data sync error repo processing does not back off on empty added
#5 Updated by Nathan Cutler 4 months ago
- Status changed from Pending Backport to Resolved